--- a/charts/edc-kafka-demo/values.yaml
+++ b/charts/edc-kafka-demo/values.yaml
@@ -17,6 +17,29 @@
 #  SPDX-License-Identifier: Apache-2.0
 #################################################################################
 
+customCaCerts:
+  test.pem: &cert |
+    -----BEGIN CERTIFICATE-----
+    MIIDLjCCAhagAwIBAgIUZR4sZEpdrLHdS5yT/aPYGzJ6TtkwDQYJKoZIhvcNAQEL
+    BQAwFDESMBAGA1UEAwwJa2Fma2EtZGV2MB4XDTI1MDkxOTA5MjQwM1oXDTM1MDkx
+    NzA5MjQwM1owFDESMBAGA1UEAwwJa2Fma2EtZGV2MIIBIjANBgkqhkiG9w0BAQEF
+    AAOCAQ8AMIIBCgKCAQEA53h9KxP27v8D3EQMSbQxvIT7t3bceJU7+BydiYhw2kcm
+    KptunDzBtBjiEVvBN5yLh5US2R4Zt+sOX1oHc2GufLZIFhp3Xg0WvNQWCCUUkszm
+    eoAw8BFvLe6VypTrAQN+wyjVuro472CFDEpVJKCS42HF5oM/xIDGR5EnaQn4i9jw
+    s4Zu55jD1EjAxqZD8qOIWWRDEDMHeTChy8bCppLtQqQGmIaStBuFNHOhDNBpNoV+
+    hs08IM62MhgzZzah4utpCHis8uLztEIGTAJY4qoeYCxHMs2SyWS+6XEn8CnKl4mj
+    UFBr83eGEWUIp5gYwbaR7WJb7u5qJxAxhkR8/ZMzLQIDAQABo3gwdjAdBgNVHQ4E
+    FgQUT0oo3n3qdmdrtAd81gE3gWgUd3YwHwYDVR0jBBgwFoAUT0oo3n3qdmdrtAd8
+    1gE3gWgUd3YwDwYDVR0TAQH/BAUwAwEB/zAOBgNVHQ8BAf8EBAMCBaAwEwYDVR0l
+    BAwwCgYIKwYBBQUHAwEwDQYJKoZIhvcNAQELBQADggEBAHK17lXEN+pKNety/a72
+    uUQ59pdsgxH/xU/aDBz8EzejJ2oOyFTRlcAMdbJ/bhpYUBWRYG7/oPtx7/kZAcyI
+    OAFjbElTXDR6XGtn1b4eEXI0jQUPtMDRRT8L+ESuS5oNhoMeyOQ2hpT39wOI+vqM
+    jdzpIdX2Voi3ZIQ9ryFHS8zMq0oZ5eaCkoCKL5wwA4Qg42qI3Hy0Hl9j3r6yyE49
+    BguIxjh2Bfd3WAQBDobOl9zA1L0N0i5pBa87LFTkVEuOdAaWFDRnkd1lRIJzaP7+
+    BRW7bkqKRMTLzrMGdByT7srDRanJ7PWUkhsy2NTxL4alqGuqdhvHifXZEYFejYV2
+    BUE=
+    -----END CERTIFICATE-----
+
 kafka:
   enabled: true
 
@@ -28,6 +51,15 @@ kafka:
     persistence:
       enabled: false
 
+  # ─── SSL Configuration ────────────────────────────────────────────────────
+  tls:
+    enabled: true
+    type: PEM
+    pemChainIncluded: true
+    existingSecret: kafka-pem
+    endpointIdentificationAlgorithm: ""
+    sslClientAuth: "none"
+
   # ─── Listener matrix ─────────────────────────────────────────────────────
   listeners:
     client:
@@ -37,7 +69,7 @@ kafka:
     controller:
       protocol: PLAINTEXT
     external:
-      protocol: SASL_PLAINTEXT
+      protocol: SASL_SSL
       containerPort: 9095
 
   externalAccess:
@@ -70,6 +102,8 @@ kafka:
     offsets.topic.replication.factor: "1"
     transaction.state.log.replication.factor: "1"
     transaction.state.log.min.isr: "1"
+    authorizer.class.name: "org.apache.kafka.metadata.authorizer.StandardAuthorizer"
+    allow.everyone.if.no.acl.found: "true"
 
   extraEnvVars:
     - name: KAFKA_OPTS
@@ -89,9 +123,9 @@ keycloak:
       configMap:
         name: "{{ .Release.Name }}-keycloak-realm-config"
   extraVolumeMounts:
-      - name: realm
-        mountPath: /opt/bitnami/keycloak/data/import
-        readOnly: true
+    - name: realm
+      mountPath: /opt/bitnami/keycloak/data/import
+      readOnly: true
   postgresql:
     auth:
       postgresPassword: "test"
@@ -114,6 +148,9 @@ keycloak:
 
 consumer-app:
   enabled: true
+  customCACerts:
+    enabled: true
+    secretName: kafka-pem
   secrets:
     edcApiKey: "password"
   application:
@@ -132,13 +169,21 @@ consumer-app:
 
 producer-app:
   enabled: true
+  customCACerts:
+    enabled: true
+    secretName: kafka-pem
   application:
     kafka:
-      bootstrapServers: "{{ .Release.Name }}-kafka-controller-0-external:9095"
+      bootstrapServers: "{{ .Release.Name }}-controller-0-external:9095"
+      securityProtocol: "SASL_SSL"
       topics:
         productionForecast: "kafka-production-forecast-topic"
         productionTracking: "kafka-production-tracking-topic"
         stream: "kafka-stream-topic"
+      ssl:
+        truststoreLocation: "/opt/java/openjdk/lib/security/cacerts"
+        truststorePassword: "changeit"
+        endpointIdentificationAlgorithm: ""
 
     authentication:
       oauth2:
@@ -169,7 +214,7 @@ producer-edc:
       id: "BPNL000000000B02"
     iatp:
       id: "did:web:changeme"
-      trustedIssuers: []
+      trustedIssuers: [ ]
       sts:
         dim:
           url: http://test.local
@@ -187,6 +232,17 @@ producer-edc:
       endpoints:
         management:
           authKey: "password"
+      # Add SSL configuration
+      env:
+        EDC_KAFKA_SSL_TRUSTSTORE_LOCATION: "/opt/java/openjdk/lib/security/cacerts"
+        EDC_KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
+        EDC_KAFKA_BOOTSTRAP_SERVERS: "demo-kafka.demo.svc.cluster.local:9095"
+        EDC_KAFKA_SECURITY_PROTOCOL: "SASL_SSL"
+        EDC_KAFKA_SASL_MECHANISM: "OAUTHBEARER"
+        EDC_KAFKA_ADMIN_TOKEN_URL: "http://kafka-keycloak:80/realms/kafka/protocol/openid-connect/token"
+        EDC_KAFKA_ADMIN_CLIENT_ID: "myclient"
+        EDC_KAFKA_ADMIN_CLIENT_SECRET_KEY: "adminKey"
+        EDC_KAFKA_ADMIN_SCOPE: "profile email"
       bdrs:
         server:
           url: http://test.local
@@ -201,6 +257,8 @@ producer-edc:
           privatekey_alias: tokenSignerPrivateKey
         verifier:
           publickey_alias: tokenSignerPublicKey
+    customCaCerts:
+      test.pem: *cert
 
 consumer-edc:
   enabled: true
@@ -215,7 +273,7 @@ consumer-edc:
       id: "BPNL000000000A01"
     iatp:
       id: "did:web:changeme"
-      trustedIssuers: []
+      trustedIssuers: [ ]
       sts:
         dim:
           url: http://test.local
@@ -233,6 +291,17 @@ consumer-edc:
       endpoints:
         management:
           authKey: "password"
+      # Add SSL configuration
+      env:
+        EDC_KAFKA_SSL_TRUSTSTORE_LOCATION: "/opt/java/openjdk/lib/security/cacerts"
+        EDC_KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
+        EDC_KAFKA_BOOTSTRAP_SERVERS: "demo-kafka.demo.svc.cluster.local:9095"
+        EDC_KAFKA_SECURITY_PROTOCOL: "SASL_SSL"
+        EDC_KAFKA_SASL_MECHANISM: "OAUTHBEARER"
+        EDC_KAFKA_ADMIN_TOKEN_URL: "http://kafka-keycloak:80/realms/kafka/protocol/openid-connect/token"
+        EDC_KAFKA_ADMIN_CLIENT_ID: "myclient"
+        EDC_KAFKA_ADMIN_CLIENT_SECRET_KEY: "adminKey"
+        EDC_KAFKA_ADMIN_SCOPE: "profile email"
       bdrs:
         server:
           url: http://test.local
@@ -247,3 +316,5 @@ consumer-edc:
           privatekey_alias: tokenSignerPrivateKey
         verifier:
           publickey_alias: tokenSignerPublicKey
+    customCaCerts:
+      test.pem: *cert
