--- a/charts/producer-app/templates/deployment.yaml
+++ b/charts/producer-app/templates/deployment.yaml
@@ -48,6 +48,30 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.customCACerts.enabled }}
+      initContainers:
+        - name: custom-cacerts
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - /bin/sh
+            - -c
+            - |
+              cp /opt/java/openjdk/lib/security/cacerts /workdir/
+              find /cacerts -type f \( -iname \*.crt -o -iname \*.pem \) -exec echo "{}" \; | while read PEM_FILE_PATH; do
+                PEM_FILE=${PEM_FILE_PATH##*/}
+                ALIAS=${PEM_FILE%.*}
+                echo "adding ${PEM_FILE} with alias ${ALIAS} to cacerts ..."
+                keytool -import -noprompt -trustcacerts -alias ${ALIAS} -file ${PEM_FILE_PATH} -keystore /workdir/cacerts -storepass changeit
+              done
+          securityContext:
+                {{- toYaml .Values.securityContext | nindent 12 }}
+          volumeMounts:
+            - name: custom-cacertificates
+              mountPath: /cacerts
+            - name: custom-cacerts
+              mountPath: /workdir
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           {{- with .Values.securityContext }}
@@ -66,6 +90,30 @@ spec:
               value: {{ .Values.application.kafka.topics.productionTracking | quote }}
             - name: KAFKA_STREAM_TOPIC
               value: {{ .Values.application.kafka.topics.stream | quote }}
+            {{- if .Values.application.kafka.securityProtocol }}
+            - name: KAFKA_SECURITY_PROTOCOL
+              value: {{ .Values.application.kafka.securityProtocol | quote }}
+            {{- end }}
+            {{- if .Values.application.kafka.ssl }}
+            - name: KAFKA_SSL_TRUSTSTORE_LOCATION
+              value: {{ .Values.application.kafka.ssl.truststoreLocation | quote }}
+            - name: KAFKA_SSL_TRUSTSTORE_PASSWORD
+              value: {{ .Values.application.kafka.ssl.truststorePassword | quote }}
+            - name: KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM
+              value: {{ .Values.application.kafka.ssl.endpointIdentificationAlgorithm | quote }}
+            {{- end }}
+            {{- if .Values.application.kafka.securityProtocol }}
+            - name: SECURITY_PROTOCOL
+              value: {{ .Values.application.kafka.securityProtocol | quote }}
+            {{- end }}
+            {{- if .Values.application.kafka.ssl }}
+            - name: SSL_TRUSTSTORE_LOCATION
+              value: {{ .Values.application.kafka.ssl.truststoreLocation | quote }}
+            - name: SSL_TRUSTSTORE_TYPE
+              value: {{ .Values.application.kafka.ssl.truststoreType | quote }}
+            - name: SSL_ENDPOINT_IDENTIFICATION_ALGORITHM
+              value: {{ .Values.application.kafka.ssl.endpointIdentificationAlgorithm | quote }}
+            {{- end }}
             # Authentication Configuration
             - name: KEYCLOAK_CLIENT_ID
               value: {{ .Values.application.authentication.oauth2.clientId | quote }}
@@ -109,13 +157,27 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- with .Values.volumeMounts }}
           volumeMounts:
+          {{- with .Values.volumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
-      {{- with .Values.volumes }}
+          {{- if .Values.customCACerts.enabled }}
+            - name: custom-cacerts
+              mountPath: /opt/java/openjdk/lib/security/cacerts
+              subPath: cacerts
+            {{- end }}
       volumes:
+      {{- with .Values.volumes }}
         {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.customCACerts.enabled }}
+        - name: custom-cacertificates
+          secret:
+            secretName: {{ tpl (required "customCACerts.secretName must be set" .Values.customCACerts.secretName) . | quote }}
+            defaultMode: 0400
+        - name: custom-cacerts
+          emptyDir:
+            sizeLimit: {{ .Values.customCACerts.emptyDirSize | default "1Mi" }}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
