--- a/charts/tractusx-edc-kafka/values.yaml
+++ b/charts/tractusx-edc-kafka/values.yaml
@@ -21,7 +21,12 @@ tractusx-connector:
   install:
     postgresql: true
     vault: true
-
+#  customCaCerts:
+#    test.pem: |
+#      -----BEGIN CERTIFICATE-----
+#      MIICuzCCAaMCAQAwMzELMAkGA1UEBhMCREUxEDAOBgNVBAgMB0JhdmFyaWExEjAQ
+#      ...
+#      -----END CERTIFICATE-----
   participant:
     id: "BPNLCHANGEME"
 
@@ -32,10 +37,10 @@ tractusx-connector:
       dim:
         url:
       oauth:
-        token_url:
+        token_url: test
         client:
-          id:
-          secret_alias:
+          id: test
+          secret_alias: test
 
   controlplane:
     image:
@@ -54,7 +59,7 @@ tractusx-connector:
         path: /api/v1/dsp
     bdrs:
       server:
-        url:
+        url: test
 
     # -- Extra environment variables that will be pass onto deployment pods
     env: {}
@@ -94,9 +99,9 @@ tractusx-connector:
         expiry_tolerance_seconds: 10
         refresh_endpoint:
       signer:
-        privatekey_alias:
+        privatekey_alias: test
       verifier:
-        publickey_alias:
+        publickey_alias: test
 
     ingresses:
       - enabled: false
