--- a/charts/edc-kafka-demo/values.yaml
+++ b/charts/edc-kafka-demo/values.yaml
@@ -16,6 +16,10 @@
 #
 #  SPDX-License-Identifier: Apache-2.0
 #################################################################################
+global:
+  security:
+    # required to use bitnamilegacy images
+    allowInsecureImages: true
 
 kafka:
   enabled: true
@@ -77,6 +81,8 @@ kafka:
         -Dorg.apache.kafka.sasl.oauthbearer.allowed.urls=http://{{ .Release.Name }}-keycloak:80/realms/kafka/protocol/openid-connect/certs,http://{{ .Release.Name }}-keycloak:80/realms/kafka/protocol/openid-connect/token
 
 keycloak:
+  image:
+    repository: bitnamilegacy/keycloak
   enabled: true
   auth:
     adminUser: admin
