chore: update image tags and repositories to "latest" and "local" in Helm charts, streamline build scripts in README

--- a/charts/tractusx-edc-kafka/values.yaml
+++ b/charts/tractusx-edc-kafka/values.yaml
@@ -40,9 +40,9 @@ tractusx-connector:
   controlplane:
     image:
       # override the edc docker image with the kafka extension image
-      repository: "tractusx/edc-controlplane-kafka"
+      repository: "edc-controlplane-kafka"
       pullPolicy: IfNotPresent
-      tag: "test"
+      tag: "latest"
 
     endpoints:
       management:
