--- a/charts/edc-kafka-demo/values.yaml
+++ b/charts/edc-kafka-demo/values.yaml
@@ -187,9 +187,9 @@ producer-edc:
     controlplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-controlplane-kafka"
+        repository: "edc-controlplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       endpoints:
         management:
           authKey: "password"
@@ -199,9 +199,9 @@ producer-edc:
     dataplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-dataplane-kafka"
+        repository: "edc-dataplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       token:
         signer:
           privatekey_alias: tokenSignerPrivateKey
@@ -233,9 +233,9 @@ consumer-edc:
     controlplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-controlplane-kafka"
+        repository: "edc-controlplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       endpoints:
         management:
           authKey: "password"
@@ -245,9 +245,9 @@ consumer-edc:
     dataplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-dataplane-kafka"
+        repository: "edc-dataplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       token:
         signer:
           privatekey_alias: tokenSignerPrivateKey
