--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -46,11 +46,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+      - uses: ./.github/actions/setup-java
 
       - name: Build with Gradle
         working-directory: poc
@@ -80,12 +76,7 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of sonar analysis
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+      - uses: ./.github/actions/setup-java
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
