--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -48,19 +48,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-          cache: gradle
+      - uses: ./.github/actions/setup-java
 
       - name: Build fat-JAR
         working-directory: poc
         run: ./gradlew shadowJar --no-daemon
 
       - name: Build docker image
-        working-directory: poc/runtimes/edc/controlplane-local
+        working-directory: poc/runtimes/edc/edc-controlplane-kafka-local
         run: |
           docker build \
           -t local-image:${{ github.sha }} \
