--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -43,8 +43,8 @@ jobs:
       - uses: ./.github/actions/run-deployment-test
         name: "Run deployment test using KinD and Helm"
         with:
-          imagename: edc-controlplane-kafka-local kafka-consumer kafka-producer
-          rootDir: runtimes/edc/edc-controlplane-kafka-local runtimes/kafka/kafka-consumer runtimes/kafka/kafka-producer
+          imagename: edc-controlplane-kafka-local edc-dataplane-kafka-local kafka-consumer kafka-producer
+          rootDir: runtimes/edc/edc-controlplane-kafka-local runtimes/edc/edc-dataplane-kafka-local runtimes/kafka/kafka-consumer runtimes/kafka/kafka-producer
           helm_command: |-
             helm install demo charts/edc-kafka-demo \
             --wait --wait-for-jobs --timeout=120s --dependency-update
