--- a/.github/workflows/deployment-test.yaml
+++ b/.github/workflows/deployment-test.yaml
@@ -46,8 +46,11 @@ jobs:
           imagename: edc-controlplane-kafka-local edc-dataplane-kafka-local kafka-consumer kafka-producer
           rootDir: runtimes/edc/edc-controlplane-kafka-local runtimes/edc/edc-dataplane-kafka-local runtimes/kafka/kafka-consumer runtimes/kafka/kafka-producer
           helm_command: |-
-            helm install demo charts/edc-kafka-demo \
-            --wait --wait-for-jobs --timeout=120s --dependency-update
+            helm install demo charts/edc-kafka-demo -n demo --create-namespace \
+            --wait --wait-for-jobs --timeout=600s --dependency-update
+            
+            # Get deployment status
+            kubectl get deployment -n demo
             
             # execute the helm test
-            helm test demo
+            helm test demo -n demo
