--- a/.github/workflows/helm-chart-release.yaml
+++ b/.github/workflows/helm-chart-release.yaml
@@ -27,17 +27,16 @@ jobs:
         with:
           version: v3.14.4
 
-      - name: Prepare charts subset
+      - name: Build chart dependencies (only the two allowed charts)
         run: |
-          mkdir -p .cr-release-packages
-          mkdir -p .charts-to-release
-          cp -R charts/edc-kafka-demo .charts-to-release/
-          cp -R charts/tractusx-edc-kafka .charts-to-release/
+          helm dependency build charts/edc-kafka-demo || true
+          helm dependency build charts/tractusx-edc-kafka || true
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          charts_dir: .charts-to-release
+          charts_dir: charts
           packages_with_index: true
+          skip_existing: true
