--- a/.github/workflows/helm-chart-release.yaml
+++ b/.github/workflows/helm-chart-release.yaml
@@ -27,6 +27,12 @@ jobs:
         with:
           version: v3.14.4
 
+      - name: Configure Helm repositories
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add eclipse-tractusx https://eclipse-tractusx.github.io/charts/dev
+          helm repo update
+
       - name: Build chart dependencies (only the two allowed charts)
         run: |
           helm dependency build charts/edc-kafka-demo || true
@@ -40,3 +46,4 @@ jobs:
           charts_dir: charts
           packages_with_index: true
           skip_existing: true
+          config: cr.yaml
