--- a/.github/workflows/helm-chart-release.yaml
+++ b/.github/workflows/helm-chart-release.yaml
@@ -2,8 +2,7 @@ name: helm-chart-release
 
 on:
   push:
-    branches:
-      - "feat/helm-release"
+    branches: ["feat/helm-release"]
   workflow_dispatch:
 
 jobs:
@@ -11,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,6 +21,18 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Ensure gh-pages branch exists
+        run: |
+          if ! git ls-remote --exit-code --heads origin gh-pages; then
+            git switch --orphan gh-pages
+            git reset --hard
+            echo "# Helm chart repo" > README.md
+            git add README.md
+            git commit -m "Initialize gh-pages branch"
+            git push origin gh-pages
+            git switch -
+          fi
 
       - name: Install Helm
         uses: azure/setup-helm@v4
@@ -33,10 +45,16 @@ jobs:
           helm repo add eclipse-tractusx https://eclipse-tractusx.github.io/charts/dev
           helm repo update
 
-      - name: Build chart dependencies (only the two allowed charts)
+      - name: Build chart dependencies
         run: |
           helm dependency build charts/edc-kafka-demo || true
           helm dependency build charts/tractusx-edc-kafka || true
+
+      - name: Package only allowed charts
+        run: |
+          mkdir -p .cr-release-packages
+          helm package charts/edc-kafka-demo --destination .cr-release-packages
+          helm package charts/tractusx-edc-kafka --destination .cr-release-packages
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
@@ -46,4 +64,4 @@ jobs:
           charts_dir: charts
           packages_with_index: true
           skip_existing: true
-          config: cr.yaml
+          skip_packaging: true
