Updated helm chart release workflow

--- a/.github/workflows/helm-chart-release.yaml
+++ b/.github/workflows/helm-chart-release.yaml
@@ -50,9 +50,17 @@ jobs:
           helm dependency build charts/edc-kafka-demo || true
           helm dependency build charts/tractusx-edc-kafka || true
 
+      - name: Stage allowed charts
+        run: |
+          rm -rf .charts-to-release
+          mkdir -p .charts-to-release
+          cp -R charts/edc-kafka-demo .charts-to-release/
+          cp -R charts/tractusx-edc-kafka .charts-to-release/
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          charts_dir: .charts-to-release
           config: ./.github/configs/cr-config.yml
