Updated helm chart release workflow

--- a/.github/workflows/helm-chart-release.yaml
+++ b/.github/workflows/helm-chart-release.yaml
@@ -11,13 +11,6 @@ jobs:
     permissions:
       contents: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        chart:
-          - edc-kafka-demo
-          - tractusx-edc-kafka
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -51,15 +44,23 @@ jobs:
           helm repo add eclipse-tractusx https://eclipse-tractusx.github.io/charts/dev
           helm repo update
 
-      - name: Build dependencies (${{ matrix.chart }})
+      - name: Build chart dependencies
         run: |
-          helm dependency build charts/${{ matrix.chart }} || true
+          helm dependency build charts/edc-kafka-demo || true
+          helm dependency build charts/tractusx-edc-kafka || true
 
-      - name: Run chart-releaser (${{ matrix.chart }})
-        id: cr
+      - name: Package only allowed charts
+        run: |
+          rm -rf .cr-release-packages
+          mkdir -p .cr-release-packages
+          helm package charts/edc-kafka-demo --destination .cr-release-packages
+          helm package charts/tractusx-edc-kafka --destination .cr-release-packages
+
+      - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          charts_dir: charts/${{ matrix.chart }}
+          charts_dir: charts
+          skip_packaging: true
           config: ./.github/configs/cr-config.yml
