--- a/.github/workflows/helm-chart-release.yaml
+++ b/.github/workflows/helm-chart-release.yaml
@@ -57,7 +57,7 @@ jobs:
           helm package charts/tractusx-edc-kafka --destination .cr-release-packages
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.7.0
+        uses: helm/chart-releaser-action@v1.5.0 # using 1.5.0 version because of https://github.com/helm/chart-releaser-action/issues/171
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
