chore: update deployment-test workflow to include Helm dependencies for kafka charts

--- a/.github/actions/run-deployment-test/action.yml
+++ b/.github/actions/run-deployment-test/action.yml
@@ -94,23 +94,33 @@ runs:
       if: failure()
       shell: bash
       run: |-
-        echo "=== Deployments Status ==="
-        kubectl get deployments -n demo
-        
-        echo -e "\n=== Deployment Descriptions (shows failure reasons) ==="
-        kubectl get deployments -n demo | tail -n +2 | awk '{print $1}' | xargs -n1 kubectl describe deployment -n demo
+        # echo "=== Deployments Status ==="
+        # kubectl get deployments -n demo
+        # 
+        # echo -e "\n=== Deployment Descriptions (shows failure reasons) ==="
+        # kubectl get deployments -n demo | tail -n +2 | awk '{print $1}' | xargs -n1 kubectl describe deployment -n demo
         
         echo -e "\n=== Pod Status ==="
         kubectl get pods -n demo
         
-        echo -e "\n=== Pod Descriptions (shows failure reasons) ==="
-        kubectl get pods -n demo --no-headers | awk '{print $1}' | xargs -n1 kubectl describe pod -n demo
+        # echo -e "\n=== Pod Descriptions (shows failure reasons) ==="
+        # kubectl get pods -n demo --no-headers | awk '{print $1}' | xargs -n1 kubectl describe pod -n demo
         
-        echo -e "\n=== Recent Events ==="
-        kubectl get events -n demo --sort-by='.lastTimestamp'
+        # echo -e "\n=== Recent Events ==="
+        # kubectl get events -n demo --sort-by='.lastTimestamp'
         
-        echo -e "\n=== Pod Logs ==="
-        kubectl get deployments -n demo | tail -n +2 | awk '{print $1}' | sed 's/^/deployment\//' | xargs -n1 kubectl logs -n demo --tail=100
+        # echo -e "\n=== Pod Logs ==="
+        # kubectl get deployments -n demo | tail -n +2 | awk '{print $1}' | sed 's/^/deployment\//' | xargs -n1 kubectl logs -n demo --tail=100
+        echo -e "\n=== consumer-app ==="
+        kubectl logs deployment/demo-consumer-app -n demo
+        echo -e "\n=== consumer-edc ==="
+        kubectl logs deployment/demo-consumer-edc-controlplane -n demo
+        echo -e "\n=== producer-edc ==="
+        kubectl logs deployment/demo-producer-edc-controlplane -n demo
+        echo -e "\n=== kafka ==="
+        kubectl logs demo-kafka-controller-0 -n demo
+        echo -e "\n=== keycloak ==="
+        kubectl logs demo-keycloak-0 -n demo
 
     #################
     ### Tear Down ###
