chore: enable loadbalancer

--- a/.github/actions/run-deployment-test/action.yml
+++ b/.github/actions/run-deployment-test/action.yml
@@ -63,6 +63,7 @@ runs:
       with:
         node_image: kindest/node:${{ inputs.k8sversion }}
         version: v0.29.0
+        cloud_provider: true
 
     - name: Build docker images
       shell: bash
