--- a/.github/actions/run-deployment-test/action.yml
+++ b/.github/actions/run-deployment-test/action.yml
@@ -59,7 +59,7 @@ runs:
         version: v1.31.1
 
     - name: Create k8s Kind Cluster
-      uses: helm/kind-action@v1.12.0
+      uses: helm/kind-action@b72c923563e6e80ea66e8e8c810798cc73e97e5e
       with:
         node_image: kindest/node:${{ inputs.k8sversion }}
         version: v0.29.0
