chore: refactor kafka-consumer to a spring boot application, introduce e2e testing endpoint

--- a/charts/edc-kafka-demo/values.yaml
+++ b/charts/edc-kafka-demo/values.yaml
@@ -120,6 +120,9 @@ keycloak:
 
 consumer-app:
   enabled: true
+  service:
+    enabled: true
+    port: 8080
   secrets:
     edcApiKey: "password"
   application:
@@ -167,6 +170,8 @@ producer-app:
 producer-edc:
   enabled: true
   tractusx-connector:
+    install:
+      vault: true
     nameOverride: producer-edc
     postgresql:
       nameOverride: producer-edc-posgresql
@@ -187,9 +192,9 @@ producer-edc:
     controlplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-controlplane-kafka"
+        repository: "edc-controlplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       endpoints:
         management:
           authKey: "password"
@@ -199,9 +204,9 @@ producer-edc:
     dataplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-dataplane-kafka"
+        repository: "edc-dataplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       token:
         signer:
           privatekey_alias: tokenSignerPrivateKey
@@ -233,9 +238,9 @@ consumer-edc:
     controlplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-controlplane-kafka"
+        repository: "edc-controlplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       endpoints:
         management:
           authKey: "password"
@@ -245,9 +250,9 @@ consumer-edc:
     dataplane:
       image:
         # override the edc docker image with the kafka extension image
-        repository: "tractusx/edc-dataplane-kafka"
+        repository: "edc-dataplane-kafka-local"
         pullPolicy: IfNotPresent
-        tag: "test"
+        tag: "latest"
       token:
         signer:
           privatekey_alias: tokenSignerPrivateKey
