--- a/charts/consumer-app/values.yaml
+++ b/charts/consumer-app/values.yaml
@@ -26,7 +26,7 @@ image:
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "local"
+  tag: "latest"
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
 
@@ -36,6 +36,7 @@ fullnameOverride: ""
 
 # Application configuration organized by logical groups
 application:
+  mode: "spring"
   # EDC Configuration
   edc:
     managementUrl: "http://{{ .Release.Name }}-edc:8081/management"
