feat: Add Kafka SSL support and restructure demo configurations (#101)
* feat: refactor Kafka PULL to KafkaBroker-PULL and update dependencies

move kafka properties to the correct fields in the DataAddress
rename "Kafka-PULL" to "KafkaBroker-PULL"
update dependencies
refactor KafkaBrokerDataFlowController to simplify dependencies

* feat: add kafka ACL management

add Kafka ACL management with KafkaAclService and integration test
introduce AdminClientFactory for Kafka ACL service and add comprehensive unit and integration tests

* chore: add missing annotations in KafkaBrokerExtension

* feat: Add Kafka SSL support and restructure demo configurations

Kafka SSL: Add SSL support incl. truststore configuration and custom CA certificates; update Helm charts to enable secure communication.
Demo restructure: Add/reshape Helm chart for the EDC Kafka demo with producer/consumer apps and base configs; unify local EDC runtimes.
Auth: Integrate OAuth2 client and remove token-revocation logic.
Access control: Introduce Kafka ACL management (KafkaAclService) and AdminClientFactory with comprehensive unit & integration tests.
Docs: Add README for the demo with installation and verification steps.
Housekeeping: Cleanup Helm charts (remove unused configs/comments), fix build failure, replace RuntimeException with EdcException and simplify tests; update .gitignore; add license headers; revert unintended env/order changes; merge demo-helm branch; refactor/rename components

* chore: fix merge conflicts

---------

Co-authored-by: Jan Kreutzfeld <jan.kreutzfeld@doubleslash.de>
Co-authored-by: ds-jhartmann <57985712+ds-jhartmann@users.noreply.github.com>

--- a/charts/producer-app/values.yaml
+++ b/charts/producer-app/values.yaml
@@ -39,11 +39,17 @@ application:
   # Kafka Configuration
   kafka:
     bootstrapServers: "{{ .Release.Name }}-kafka-controller-0-external:9095"
+    securityProtocol: "SASL_SSL"
     topics:
       productionForecast: "kafka-production-forecast-topic"
       productionTracking: "kafka-production-tracking-topic"
       stream: "kafka-stream-topic"
-  
+    ssl:
+      truststoreLocation: "/certs/kafka.server.truststore.jks"
+      truststorePassword: "kafka123"
+      endpointIdentificationAlgorithm: ""
+      truststoreType: "JKS"
+
   # Authentication Configuration
   authentication:
     oauth2:
@@ -166,3 +172,8 @@ volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
+
+customCACerts:
+  enabled: false
+  secretName: kafka-pem
+  emptyDirSize: 1Mi
